[tool.poetry]
name = "repeng"
version = "0.1.0"
description = ""
authors = ["Misha Wagner <mishajw@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
datasets = "^2.16.1"
torch = "^2.1.2"
transformer-lens = "^1.12.0"
pytest = "^7.4.4"
scikit-learn = "^1.3.2"
seaborn = "^0.13.1"
mppr = { git = "https://github.com/mishajw/mppr.git", branch = "main" }
transformers = "^4.36.2"
torchtyping = "^0.1.4"
typeguard = "^4.1.5"
ctransformers = "^0.2.27"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"
black = "^23.12.1"
pre-commit = "^3.6.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
