[tool.poetry]
name = "repeng"
version = "0.1.0"
description = ""
authors = ["Misha Wagner <mishajw@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
datasets = "^2.16.1"
torch = "^2.1.2"
pytest = "^7.4.4"
scikit-learn = "^1.3.2"
seaborn = "^0.13.1"
mppr = { git = "https://github.com/mishajw/mppr.git", branch = "main" }
transformers = "^4.36.2"
openai = "^1.7.2"
python-dotenv = "^1.0.0"
jsonlines = "^4.0.0"
jaxtyping = "^0.2.25"
fire = "^0.5.0"
accelerate = "^0.26.1"
plotly = "^5.18.0"
promptsource = { git = "https://github.com/bigscience-workshop/promptsource", branch = "main" }
kaleido = "0.2.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"
black = "^21.0.0"
pre-commit = "^3.6.0"
jupyter = "^1.0.0"
pyright = "^1.1.347"
viztracer = "^0.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.ruff]
exclude = ['experiments/scratch']

[tool.pyright]
exclude = ['experiments/scratch']
